# Daedalus

./: .gitignore  README.md  pyproject.toml
daedalus/: __init__.py  daedalus-factory.py
daedalus/api/: factory.py
daedalus/api/adapter/: falcon_adapter.py  fastapi_adapter.py  framework_adapter.py
daedalus/api/decorators/: endpoint.py
daedalus/api/interface/: request.py  response.py
daedalus/bootstrap/: bootstrap_manager.py  mapper_manager.py  module_node.py
daedalus/bootstrap/decorator/: controller.py  module.py  service.py
daedalus/core/: bootstrapper.py  factory.py
daedalus/core/api/: controller.py  controller_implementation.py
daedalus/core/api/context/: controller_context.py
daedalus/core/api/decorator/: delete.py  get.py  mutate.py  patch.py  post.py  put.py  search.py
daedalus/core/bootstrap/: bootstrapper.py  controller_scanner.py  graphql_generator.py  rest_registrar.py
daedalus/core/scheme/: base.py  convert_sqlalchemy_to_scheme.py
daedalus/crud/decorator/: delete.py  mutate.py  search.py
daedalus/database/: base_model.py
daedalus/database/decorator/: model.py
daedalus/database/mixin/: id_mixin.py  soft_delete_mixin.py  timestamp_mixin.py
daedalus/ioc/: controller.py  inject.py  injectable.py  lazy_inject.py  module.py  service.py
daedalus/logger/: log_level.py  logger.py
example/: README.md  __main__.py  pyproject.toml  run.sh
example/example/: __main__.py  main_module.py
example/example/apps/article/: controller.py  models.py
example/example/count/: count_controller.py  count_module.py
example/logger/: logger_module.py
example/src/: main.py  main_module.py
example/src/count/: count_controller.py  count_service.py
example/src/logger/: logger_module.py  logger_service.py
example/src/test/: test_module.py
example/src/user/: user_controller.py  user_module.py  user_service.py
example/user/: user_module.py
(+1 files in other folders)
