[project]
name = "example"
version = "0.1.0"
description = ""
authors = [
    {name = "ER28",email = "l.guerra-rago@pm.me"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
janus = {path = "../", develop = true}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
